<resources>
    <string name="app_name">FolwGeek</string>

    <string name="empty"></string>

    <string name="login">登录</string>
    <string name="account">手机号/邮箱</string>
    <string name="nick">昵称</string>
    <string name="password">密码</string>
    <string name="register">还没有账号？马上注册</string>

    <string name="news">资讯</string>
    <string name="change_theme">改变主题</string>
    <string name="setting">设置</string>
    <string name="tweets">动弹</string>
    <string name="blog">博客</string>
    <string name="explore">发现</string>
    <string name="technology_question_answer">技术问答</string>
    <string name="my_blog">我的博客</string>
    <string name="my_tweet">我的动弹</string>
    <string name="my_favorite">我的收藏</string>

    <string name="search">搜索</string>
    <string name="reminder">提醒</string>
    <string name="about">关于</string>
    <string name="location">地址</string>
    <string name="capture">二维码</string>
    <string name="more">更多</string>
    <string name="android">Android</string>
    <string name="apple">Ios</string>
    <string name="windows">Window Phone</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="tab_name_module">Module</string>
    <string name="tab_name_news">发现</string>
    <string name="tab_name_center">Home</string>
    <string name="tab_name_message">消息</string>
    <string name="tab_name_mine">我</string>

    <string name="toolbar_title_snack">摇一摇</string>

    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="network_forbidden_login">你被服务器禁止登录，详询客服</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>

</resources>
