<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/view_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main_hint_color">

                    <com.iyiyo.uikit.ClearableWithIconEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_shape_input"
                        android:hint="@string/account"
                        android:textColor="@color/main_desc_color"
                        android:textColorHint="@color/main_hint_color"
                        android:textSize="@dimen/text_size_18"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main_hint_color">

                    <com.iyiyo.uikit.ClearableWithIconEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_shape_input"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/main_desc_color"
                        android:textColorHint="@color/main_hint_color"
                        android:textSize="@dimen/text_size_18"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main_hint_color">

                    <com.iyiyo.uikit.ClearableWithIconEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_shape_input"
                        android:hint="@string/account"
                        android:textColor="@color/main_desc_color"
                        android:textColorHint="@color/main_hint_color"
                        android:textSize="@dimen/text_size_18"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main_hint_color">

                    <com.iyiyo.uikit.ClearableWithIconEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_shape_input"
                        android:hint="@string/nick"
                        android:inputType="textPassword"
                        android:textColor="@color/main_desc_color"
                        android:textColorHint="@color/main_hint_color"
                        android:textSize="@dimen/text_size_18"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password_two_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main_hint_color">

                    <com.iyiyo.uikit.ClearableWithIconEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_shape_input"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/main_desc_color"
                        android:textColorHint="@color/main_hint_color"
                        android:textSize="@dimen/text_size_18"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </FrameLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/selector_button"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/login"
            android:textSize="@dimen/text_size_18"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@null"
            android:paddingBottom="@dimen/space_5"
            android:paddingTop="@dimen/space_5"
            android:text="@string/register"
            android:textSize="@dimen/text_size_12"/>
    </LinearLayout>

</LinearLayout>
